# rh

./: .dockerignore  .gitattributes  .gitignore  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  Dockerfile  LICENSE-APACHE  README.md  REFACTOR-REVIEW.md  REFACTOR.md  RELEASE.md  RELEASE_GUIDE.md  RELEASING.md  TODO.md  announcing-rh.md  build.sh  check_errors.txt  check_literals.txt  check_operators.txt  check_out.txt  check_out2.txt  check_out3.txt  codegen.json  config.json  debug_enum_classification.rs  dir.txt  dir2.txt  dir3.txt  elm_expr_enum.txt  elm_expression.txt  elm_list.txt  elm_structs.txt  elm_types.txt  elm_types2.txt  email.txt  (+44 more)
apps/example-cli/: Cargo.toml
apps/example-cli/src/: main.rs
apps/fhir-codegen/: Cargo.toml
apps/fhir-codegen/src/: main.rs
apps/rh/: Cargo.toml
apps/rh-cli/: Cargo.toml  README.md  build.rs
apps/rh-cli/docs/: CODEGEN.md  CQL.md  DOWNLOAD.md  FHIRPATH.md  FSH.md  PACKAGER.md  VALIDATOR.md  VCL.md
apps/rh-cli/src/: codegen.rs  cql.rs  download.rs  ffq.rs  fhirpath.rs  fsh.rs  main.rs  output.rs  package.rs  publish.rs  snapshot.rs  validator.rs  vcl.rs
apps/rh-cli/tests/: codegen_integration_test.rs  cql_integration_test.rs  download_integration_test.rs  fhirpath_integration_test.rs  fsh_integration_test.rs  global_flags_test.rs  package_integration_test.rs  snapshot_integration_test.rs  validator_integration_test.rs  vcl_integration_test.rs  ws3_output_contract_test.rs
apps/rh/src/: codegen.rs  fhirpath.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/fhirpath/: Cargo.toml  README.md  build.rs  fhirpath.g4  implementation.md  units.md
crates/fhirpath/examples/: README.md  arithmetic_operations.rs  array_indexing_demo.rs  basic_demo.rs  boolean_collection_operations.rs  children_function.rs  collection_operations.rs  combine_function.rs  converts_to_boolean.rs  date_conversion.rs  datetime_component_extraction_example.rs  datetime_functions_example.rs  debug_indexing.rs  debug_union.rs  descendants_function.rs  extension_system_demo.rs  fhir_extension_functions.rs  fhir_extension_variables.rs  fhir_patient_navigation.rs  fhir_resource_navigation.rs  fhir_validation_examples.rs  fhirpath_arithmetic.rs  fhirpath_collections.rs  fhirpath_demo.rs  fhirpath_patient_navigation.rs  fhirpath_strings.rs  iif_function.rs  implies_operations.rs  indexing_operations.rs  last_index_of.rs  long_conversion.rs  matches_full_function.rs  matches_function.rs  math_functions.rs  not_function.rs  of_type_function.rs  quantity_conversion.rs  quantity_literals.rs  replace_matches_function.rs  simple_math.rs  (+16 more)
crates/fhirpath/src/: ast.rs  evaluator.rs  lib.rs  parser.rs
crates/fhirpath/tests/: advanced_comparison_test.rs  advanced_filtering_test.rs  arithmetic_operations_integration.rs  boolean_collection_test.rs  collection_functions_test.rs  combine_function_test.rs  comprehensive_string_test.rs  converts_to_boolean_function_test.rs  converts_to_integer_function_test.rs  date_conversion_test.rs  datetime_arithmetic_test.rs  datetime_component_integration_test.rs  datetime_function_arithmetic_test.rs  datetime_integration_test.rs  datetime_precision_test.rs  distinct_functions_test.rs  examples_test.rs  fhir_extension_test.rs  iif_function_test.rs  implies_test.rs  integration_tests.rs  long_conversion_test.rs  matches_full_function_test.rs  matches_function_test.rs  math_integration_test.rs  membership_operations_test.rs  of_type_function_test.rs  parser_integration_test.rs  quantity_arithmetic_test.rs  quantity_conversion_test.rs  repeat_function_test.rs  replace_matches_integration_test.rs  sql_on_fhir_integration_test.rs  string_conversion_test.rs  string_integration_test.rs  subset_superset_test.rs  subsetting_test.rs  temperature_conversion_test.rs  this_context_test.rs  time_conversion_test.rs  (+6 more)
crates/rh-codegen/: Cargo.toml  README.md  organized-directory-structure.md
crates/rh-codegen/benches/: generate.rs
crates/rh-codegen/examples/: README.md  cardinality_fix_summary.rs  choice_type_trait_example.rs  codegen_basic_usage.rs  codegen_package_management.rs  organized_directory_generation.rs  test_array_fix.rs  test_array_method_bodies.rs  test_binding_strength.rs  test_cardinality_fix.rs  test_cardinality_validation.rs  test_choice_types.rs  test_invariant_extraction.rs  test_nested_backbone_fix.rs  test_nested_fix.rs  test_readme_generation.rs  test_real_fix.rs  test_required_binding_types.rs  test_trait_impl_nested_fix.rs  test_validation_trait.rs  trait_generation_example.rs
crates/rh-codegen/src/: bindings.rs  config.rs  fhir_types.rs  generator.rs  invariants.rs  lib.rs  macros.rs  naming.rs  (+7 more)
crates/rh-cql/: ARCHITECTURE.md  CONFORMANCE.md  CONFORMANCE_INDEX.md  CONFORMANCE_RESULTS.md  Cargo.toml  PLAN.md  README.md  REFACTOR_TASKS.md  SPEC_COVERAGE.md  justfile
crates/rh-ffq/: Cargo.toml  README.md  test_sample2.rs
crates/rh-fhirpath/: .gitignore  CONFORMANCE.md  Cargo.toml  README.md  SPEC_COVERAGE.md  TRACE.md  WASM_BUILD.md  implementation.md  justfile
crates/rh-foundation/: Cargo.toml  LOADER.md  README.md  SNAPSHOT.md
crates/rh-fsh/: ARCHITECTURE.md  CONFORMANCE.md  Cargo.toml  README.md
crates/rh-hl7_fhir_r4_core/: Cargo.toml  README.md
crates/rh-hl7_fhir_r5_core/: Cargo.toml  README.md
crates/rh-loader/: Cargo.toml  README.md
crates/rh-packager/: Cargo.toml  GUIDE.md  PROCESSORS.md  README.md
crates/rh-publisher/: Cargo.toml  README.md
crates/rh-snapshot/: Cargo.toml  README.md  TODO.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md
crates/rh-validator/: ALTERNATE_VALIDATION_DESIGN.md  ARCHITECTURE.md  CONFORMANCE_CI.md  Cargo.toml  DESIGN.md  FALSE_NEGATIVES_ANALYSIS.md  JAVA_AGREEMENT_PLAN.md  PERFORMANCE.md  PHASE0_COMPLETE.md  PHASE2_COMPLETE.md  PHASE9_COMPLETE.md  PHASE_10_COMPLETE.md  PHASE_11_COMPLETE.md  PHASE_14_PLAN.md  PHASE_15_ANALYSIS.md  PHASE_15_COMPLETE.md  README.md  TODO.md  VALIDATION_TODO.md  justfile
crates/rh-vcl/: .gitignore  Cargo.toml  EXAMPLES.md  README.md  WASM_BUILD.md  build.rs  justfile
(+3739 files in other folders)
