[workspace]
resolver = "2"
members = [
    "crates/*",
    "apps/*",
]

# Optional: exclude specific directories if needed
exclude = [
    "target",
    "docs",
]

# Workspace-wide dependencies that can be shared across all crates
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"

# Utilities
convert_case = "0.6"
indexmap = { version = "2.0", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client and utilities
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.0"

# Parsing
nom = "7.1"
regex = "1.0"

# Date and time handling  
chrono = { version = "0.4", features = ["serde"] }

# Archive handling
tar = "0.4"
flate2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# REPL and command line interfaces
rustyline = "13.0"

# Development dependencies
criterion = "0.5"

# Workspace-wide package metadata
[workspace.package]
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/your-monorepo"
rust-version = "1.70"
