[package]
name = "rh"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified CLI for FHIR processing tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rustyline = { workspace = true }

# Local workspace crates
rh-foundation = { path = "../../crates/rh-foundation", features = ["http"] }
rh-codegen = { path = "../../crates/rh-codegen" }
rh-cql = { path = "../../crates/rh-cql" }
rh-fhirpath = { path = "../../crates/rh-fhirpath" }
rh-validator = { path = "../../crates/rh-validator" }
rh-vcl = { path = "../../crates/rh-vcl" }
hl7_fhir_r4_core = { path = "../../crates/rh-hl7_fhir_r4_core" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
