[package]
name = "rh-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Unified CLI for FHIR processing tools"
keywords = ["fhir", "healthcare", "cli", "hl7", "validation"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"

[[bin]]
name = "rh"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rustyline = { workspace = true }
glob = "0.3"

# Local workspace crates
rh-foundation = { path = "../../crates/rh-foundation", version = "0.1.0-beta.1", features = ["http"] }
rh-codegen = { path = "../../crates/rh-codegen", version = "0.1.0-beta.1" }
rh-cql = { path = "../../crates/rh-cql", version = "0.1.0-beta.1" }
rh-fhirpath = { path = "../../crates/rh-fhirpath", version = "0.1.0-beta.1" }
rh-validator = { path = "../../crates/rh-validator", version = "0.2.0-beta.1" }
rh-vcl = { path = "../../crates/rh-vcl", version = "0.1.0-beta.1" }
rh-hl7-fhir-r4-core = { path = "../../crates/rh-hl7_fhir_r4_core", version = "0.1.0-beta.1" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
