[package]
name = "rh-codegen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Code generation library for creating Rust types from FHIR StructureDefinitions"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
convert_case = { workspace = true }
indexmap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }

# Local workspace crates
rh-common = { path = "../rh-common" }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
