[package]
name = "rh-cql"
version.workspace = true
edition.workspace = true
description = "CQL (Clinical Quality Language) capabilities including CQL-to-ELM translation and execution"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cql", "elm", "fhir", "clinical-quality-language", "healthcare"]
categories = ["science", "parser-implementations"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nom = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
quick-xml = { workspace = true }

[[bench]]
name = "bench_compile"
harness = false

[[bench]]
name = "bench_eval"
harness = false

[[bench]]
name = "bench_lookup"
harness = false

[[bin]]
name = "cql-test-parse"
path = "src/bin/test_parse.rs"

[features]
default = []
