[package]
name = "rh-fhirpath"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "FHIRPath expression parser and evaluator for FHIR resources"
authors = ["Reason Healthcare"]
repository = "https://github.com/reason-healthcare/rh"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

# WASM dependencies - only included when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
tokio-test = "0.4"
