[package]
name = "rh-fhirpath"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FHIRPath expression parser and evaluator for FHIR resources"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["fhirpath", "fhir", "healthcare", "parser", "hl7"]
categories = ["parser-implementations", "api-bindings"]
readme = "README.md"

[lib]
crate-type = ["rlib"]

[features]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[dependencies]
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

# FHIR type metadata
rh-hl7-fhir-r4-core = { path = "../rh-hl7_fhir_r4_core", version = "0.1.0-beta.1" }

# WASM dependencies - only included when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1", features = ["wasm"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
tokio-test = "0.4"
