[package]
name = "rh-foundation"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Foundation crate providing common utilities, error handling, and shared functionality"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
http = ["reqwest", "tokio"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]
