[package]
name = "hl7_fhir_r4_core"
version = "0.1.0"
edition = "2021"
description = "Generated FHIR types from hl7.fhir.r4.core package version 4.0.1"
authors = ["FHIR Code Generator"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
rh-foundation = { path = "/Users/bkaney/projects/rh/crates/rh-foundation" }

[lib]
name = "hl7_fhir_r4_core"
path = "src/lib.rs"
