[package]
name = "rh-hl7-fhir-r4-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Generated FHIR types from hl7.fhir.r4.core package version 4.0.1"
authors.workspace = true
keywords = ["fhir", "fhir-r4", "healthcare", "hl7", "types"]
categories = ["api-bindings", "data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1" }

[lib]
name = "rh_hl7_fhir_r4_core"
path = "src/lib.rs"
