[package]
name = "rh-hl7-fhir-r5-core"
version = "0.1.0"
edition = "2021"
description = "Generated FHIR types from hl7.fhir.r5.core package version 5.0.0"
authors = ["FHIR Code Generator"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"
rh-foundation = { path = "../rh-foundation", version = "0.2.0-beta.2" }

[lib]
name = "rh_hl7_fhir_r5_core"
path = "src/lib.rs"
