[package]
name = "rh-hl7-fhir-r5-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Generated FHIR types from hl7.fhir.r5.core package version 5.0.0"
authors.workspace = true
keywords = ["fhir", "fhir-r5", "healthcare", "hl7", "types"]
categories = ["api-bindings", "data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.14", features = ["macros"] }
once_cell = "1.19"
rh-foundation = { path = "../rh-foundation", version = "0.2.5" }

[lib]
name = "rh_hl7_fhir_r5_core"
path = "src/lib.rs"

[lints]
workspace = true
