[package]
name = "rh-loader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "FHIR package loading and downloading library for npm-style registries"
keywords = [
    "fhir",
    "healthcare",
    "loader",
    "packages",
    "npm",
    "registry",
    "download",
]
categories = ["healthcare", "network-programming", "data-structures"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }

# Local workspace crates
rh-foundation = { path = "../rh-foundation", features = ["http"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
