[package]
name = "rh-packager"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "FHIR Package assembler — builds conformant FHIR Packages from a source directory"
keywords = ["fhir", "healthcare", "packager", "package", "hl7"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"

[lib]
doctest = false

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

# TOML parsing for packager.toml
toml = { workspace = true }

# Markdown → XHTML conversion
pulldown-cmark = { workspace = true }

# Base64 encoding for CQL/ELM content
base64 = { workspace = true }

# Temporary directory management for shell processors
tempfile = "3"

# Local workspace crates
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1", features = ["http"] }
rh-validator = { path = "../rh-validator", version = "0.2.0-beta.1" }
rh-cql = { path = "../rh-cql", version = "0.1.0-beta.1" }

[dev-dependencies]
tempfile = "3"
