[package]
name = "rh-snapshot"
version = "0.1.0"
edition = "2021"
authors = ["Reason Healthcare"]
license = "MIT OR Apache-2.0"
description = "FHIR StructureDefinition snapshot generation library"
repository = "https://github.com/reason-healthcare/rh"
keywords = ["fhir", "healthcare", "snapshot", "structuredefinition"]
categories = ["healthcare"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Workspace crates
rh-foundation = { path = "../rh-foundation" }
rh-loader = { path = "../rh-loader" }

[dev-dependencies]
tempfile = "3.8"
