[package]
name = "rh-validator"
version = "0.2.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hybrid FHIR R4 validator with snapshot-based profile validation"
keywords = [
    "fhir",
    "healthcare",
    "validation",
    "profile",
    "hl7",
]
categories = ["parsing", "data-structures", "healthcare"]

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Local workspace crates
rh-foundation = { path = "../rh-foundation" }
rh-snapshot = { path = "../rh-snapshot" }  # NEW: Snapshot-based validation
rh-loader = { path = "../rh-loader" }      # NEW: FHIR package loading
rh-fhirpath = { path = "../rh-fhirpath" }  # FHIRPath invariant validation

# Caching
lru = "0.12"

# Parallelism (for future batch validation)
rayon = "1.10"

[dev-dependencies]
# Testing with generated FHIR types
hl7_fhir_r4_core = { path = "../rh-hl7_fhir_r4_core" }

# Test utilities
dirs = "5.0"

# Benchmarking (to be added in Phase 8)
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "validation"
harness = false
