[package]
name = "rh-validator"
version = "0.2.0-beta.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Hybrid FHIR R4 validator with snapshot-based profile validation"
keywords = [
    "fhir",
    "healthcare",
    "validation",
    "profile",
    "hl7",
]
categories = ["parsing", "data-structures", "healthcare"]
readme = "README.md"

[lib]
doctest = false

[features]
default = []
fhir-test-cases = ["zip"]

[dependencies]
# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

# Local workspace crates
rh-foundation = { path = "../rh-foundation", version = "0.1.0-beta.1", features = ["http"] }
rh-fhirpath = { path = "../rh-fhirpath", version = "0.1.0-beta.1" }  # FHIRPath invariant validation

# Caching
lru = "0.16"

# Parallelism (for future batch validation)
rayon = "1.10"

# URL encoding for terminology service
urlencoding = "2.1"

# HTTP client for terminology service
reqwest = { workspace = true, features = ["blocking", "json"] }

# Home directory for cache path
dirs = "5.0"

# Optional dependencies for FHIR test cases
zip = { version = "0.6", optional = true }

[dev-dependencies]
# Testing with generated FHIR types
rh-hl7-fhir-r4-core = { path = "../rh-hl7_fhir_r4_core", version = "0.1.0-beta.1" }

# Benchmarking (to be added in Phase 8)
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "validation"
harness = false
