[package]

name = "rh-vcl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ValueSet Compose Language (VCL) is a domain-specific language for expressing ValueSet CLDs in a compact syntax suitable for use within a URL and enabling a new familty of implicit ValueSet URIs that are usable across all code systems. The design and development of VCL was inspired by the Expression Constraint Language (ECL) from SNOMED CT."
authors = ["Reason Healthcare"]
repository = "https://github.com/reason-healthcare/rh"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
nom = { workspace = true }

# WASM dependencies - only included when targeting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

